css: fix text sizes in desktop mode on mobile.
Disable font boosting on mobile. By default, when desktop mode is
enabled on mobile, mobile browsers will automagically increase the size
of text. Usually they do so poorly, making things like headers smaller
than body text, which breaks the layout.

Fixes regression in d6b1302e0.

--- a/app/javascript/src/styles/base/010_reset.scss
+++ b/app/javascript/src/styles/base/010_reset.scss
@@ -1,3 +1,11 @@
+html {
+  // Disable font boosting on mobile. By default, when desktop mode is enabled
+  // on mobile, mobile browsers will automagically increase the size of text.
+  // Usually they do so poorly, making things like headers smaller than body
+  // text, which breaks the layout.
+  text-size-adjust: none;
+}
+
 *, ::before, ::after {
   box-sizing: border-box;
 }
